--- a/Sccs/style.scss
+++ b/Sccs/style.scss
@@ -1,6 +1,18 @@
 @import "./config";
 @import "./breakpoints";
 @import "./animation";
+
+//Visibility 
+.hide-for-mobile {
+    @include media(mobile-tablet){
+        display: none;
+    }
+}
+.hide-for-dektop {
+    @include media(desktop-s){
+        display: none;
+    }
+}
 .header {
     width: 100%;
     padding: 17px 24px;
@@ -33,26 +45,30 @@
             transition: color 300ms ease-in;
             @include font-size(18px);
             
-            &:not(last-child){
-                margin-left: 34px;
+            @include media(desktop-s){
+                &:not(last-child){
+                    margin-left: 34px;
+                }
             }
 
-            &::before {
-                content: "";
-                position: absolute;
-                display: block;
-                left: 0;
-                right: 0;
-                height: 4px;
-                bottom: -30px; //Here is the key
-                background: linear-gradient(to right, $lime-green, $cyan);
-                opacity: 0;
-                transition: opacity 300ms ease-in;
-            }
-            &:hover{
-                color: $dark-blue;
+            @include media(desktop-s) {
                 &::before {
-                    opacity: 1;
+                    content: "";
+                    position: absolute;
+                    display: block;
+                    left: 0;
+                    right: 0;
+                    height: 4px;
+                    bottom: -30px; //Here is the key
+                    background: linear-gradient(to right, $lime-green, $cyan);
+                    opacity: 0;
+                    transition: opacity 300ms ease-in;
+                }
+                &:hover{
+                    color: $dark-blue;
+                    &::before {
+                        opacity: 1;
+                    }
                 }
             }
         }
@@ -90,21 +106,36 @@
     cursor: pointer;
 }
 .overlay {
-    position: absolute;
-    width: 100%;
-    height: calc(100vh - 58px);
-    top: 90%;
-    left: 0;
-    right: 0;
-}
-//Visibility 
-.hide-for-mobile {
     @include media(mobile-tablet){
-        display: none;
+        position: absolute;
+        width: 100%;
+        height: calc(100vh - 58px);
+        top: 90%;
+        left: 0;
+        right: 0;
+        background-image: linear-gradient($dark-blue, transparent);
     }
+    @extend .hide-for-dektop;
 }
-.hide-for-dektop {
-    @include media(desktop-s){
-        display: none;
+
+.header__links {
+    @include media(mobile-tablet) {
+        width: 85%;
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 120%;
+        padding: 20px 0;
+        align-items: center;
+        margin: 0 auto;
+        z-index: 9;
+        text-align: center;
+        border-radius: 4px;
+        background-color: $white;
+    }
+    .menu-link {
+        @include media(mobile-tablet){
+         padding: 10px 0;
+        }
     }
 }
