50% de avance del hero

--- a/Sccs/_config.scss
+++ b/Sccs/_config.scss
@@ -20,4 +20,5 @@ $white: hsl(0, 0%, 100%);
     margin: 0;
     box-sizing: border-box;
     font-family: 'Public Sans', sans-serif;
+    text-decoration: none;
 }
