--- a/Sccs/_animation.scss
+++ b/Sccs/_animation.scss
@@ -2,26 +2,26 @@
 
 @keyframes fade {
     0% {
-        height: 0px;
+        /* height: 0px; */
         opacity: 0;
         visibility: hidden;
     }
     100% {
         opacity: 1;
-        height: 100vh;
+        /* height: 100vh; */
         visibility: visible;
     }
 }
 @keyframes fade-out {
     0% {
-        height: 100vh;
+        /* height: 100vh; */
         opacity: 1;
         visibility: visible;
     }
     100% {
         opacity: 0;
-        height: 0px;
-        visibility: hidden;
+        /* height: 0px;
+  */       visibility: hidden;
     }
 }
 
