--- a/Sccs/style.css
+++ b/Sccs/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Public Sans", sans-serif;
+  text-decoration: none;
 }
 
 /* Media Queries Mixin
@@ -10,25 +11,26 @@
 **********************/
 @keyframes fade {
   0% {
-    height: 0px;
+    /* height: 0px; */
     opacity: 0;
     visibility: hidden;
   }
   100% {
     opacity: 1;
-    height: 100vh;
+    /* height: 100vh; */
     visibility: visible;
   }
 }
 @keyframes fade-out {
   0% {
-    height: 100vh;
+    /* height: 100vh; */
     opacity: 1;
     visibility: visible;
   }
   100% {
     opacity: 0;
-    height: 0px;
+    /* height: 0px;
+    */
     visibility: hidden;
   }
 }
@@ -70,11 +72,13 @@
   width: 100%;
   padding: 17px 24px;
   position: relative;
+  background-color: white;
+  z-index: 8;
 }
 .header-nav {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 .header__menu > span {
@@ -135,7 +139,8 @@
 .header .open span:last-child {
   transform: rotate(-45deg);
 }
-.header-button {
+
+.button {
   padding: 16px 30px;
   border-radius: 50px;
   border: none;
@@ -146,7 +151,7 @@
   opacity: 1;
   transition: opacity 300ms ease-in;
 }
-.header-button:hover {
+.button:hover {
   opacity: 0.7;
 }
 
@@ -159,7 +164,7 @@
     position: absolute;
     width: 100%;
     height: calc(100vh - 58px);
-    top: 90%;
+    top: 100%;
     left: 0;
     right: 0;
     background-image: linear-gradient(#2d314d, transparent);
@@ -186,6 +191,108 @@
   .header__links .menu-link {
     padding: 10px 0;
   }
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
+.hero {
+  width: 100%;
+  display: flex;
+}
+@media only screen and (min-width: 280px) and (max-width: 992px) {
+  .hero {
+    flex-direction: column;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .hero {
+    flex-direction: row;
+    align-items: center;
+  }
+}
+
+.hero_image {
+  width: 100%;
+  position: relative;
+  background-image: url("../assets/images/bg-intro-desktop.svg");
+  background-size: cover;
+  background-position: 0% center;
+  background-repeat: no-repeat;
+}
+@media only screen and (min-width: 280px) and (max-width: 992px) {
+  .hero_image {
+    min-height: 285px;
+    background-image: url("../assets/images/bg-intro-mobile.svg");
+    background-position: center;
+  }
+}
+.hero_image::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: 95%;
+  background-image: url("../assets/images/image-mockups.png");
+  background-repeat: no-repeat;
+  background-position: center bottom;
+}
+@media only screen and (min-width: 992px) {
+  .hero_image::before {
+    background-size: 98%;
+    height: 626px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .hero_image {
+    order: 1;
+    height: 590px;
+  }
+}
+
+.hero_text {
+  width: 100%;
+  padding: 20px;
+  position: relative;
+}
+.hero_text--title {
+  font-weight: 400;
+  color: #2d314d;
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 30px;
+  font-size: 1.875rem;
+  line-height: 2.8125rem;
+}
+@media only screen and (min-width: 992px) {
+  .hero_text--title {
+    text-align: left;
+  }
+}
+.hero_text--paragraph {
+  font-weight: 300;
+  color: #9698a6;
+  margin-bottom: 20px;
+  font-size: 18px;
+  font-size: 1.125rem;
+  line-height: 1.6875rem;
+}
+@media only screen and (min-width: 992px) {
+  .hero_text {
+    padding: 0 120px;
+  }
+}
+
+.hero-button {
+  font-weight: 400;
+  position: absolute;
+  left: 50%;
+  padding: 10px 20px;
+  transform: translateX(-50%);
+  font-size: 18px;
+  font-size: 1.125rem;
+  line-height: 1.6875rem;
 }
 
 /*# sourceMappingURL=style.css.map */
