Features section finish

--- a/Sccs/_hero.scss
+++ b/Sccs/_hero.scss
@@ -56,6 +56,7 @@
 .hero_text {
     width: 100%;
     padding: 20px;
+    padding-bottom: 80px;
     position: relative;
     &--title {
         font-weight: 400;
