--- a/Sccs/style.css
+++ b/Sccs/style.css
@@ -269,6 +269,7 @@
 .hero_text {
   width: 100%;
   padding: 20px;
+  padding-bottom: 80px;
   position: relative;
 }
 .hero_text--title {
@@ -319,6 +320,13 @@
     left: 18%;
     transform: translate(0);
   }
+}
+
+.features.features__grid {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 /*# sourceMappingURL=style.css.map */
