--- a/Sccs/style.css
+++ b/Sccs/style.css
@@ -385,4 +385,57 @@
   line-height: 2.25rem;
 }
 
+.articles {
+  width: 100%;
+  padding: 80px 0;
+  background-color: #fafafa;
+}
+.articles-section__title {
+  text-align: center;
+  font-weight: 400;
+  color: #2d314d;
+  font-size: 30px;
+  font-size: 1.875rem;
+  line-height: 2.8125rem;
+}
+
+.grid-articles {
+  width: 100%;
+  display: grid;
+  gap: 20px;
+  justify-items: center;
+}
+@media only screen and (max-width: 768px) {
+  .grid-articles {
+    grid-template-columns: 1fr;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .grid-articles {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media only screen and (min-width: 992px) {
+  .grid-articles {
+    width: 80%;
+    margin: 0 auto;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.article {
+  max-width: 320px;
+  background-color: white;
+  border-radius: 5px;
+}
+.article__img {
+  width: 100%;
+  height: 180px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+.article__text {
+  padding: 30px;
+}
+
 /*# sourceMappingURL=style.css.map */
